--- a/montreal_winter_climate.ipynb
+++ b/montreal_winter_climate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
     }
    ],
    "source": [
-    "mcgill_all = pd.read_csv('http://www.cdmccray.com/dataset/mcgill_all.csv')\n",
-    "yul_all = pd.read_csv('http://www.cdmccray.com/dataset/yul_all.csv')"
+    "mcgill_all = pd.read_csv('./mcgill_all.csv')\n",
+    "yul_all = pd.read_csv('./yul_all.csv')"
    ]
   },
   {
